fix: added white space

--- a/src/components/Request/Request.module.css
+++ b/src/components/Request/Request.module.css
@@ -52,5 +52,6 @@
 
     .request button {
         max-width: 80%;
+        white-space: nowrap;
     }
 }
